--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
   padding: 0;
 }
 
+body {
+  background-color: #2a2a2a;
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
+  text-shadow: 1px 2px 4px black;
+}
+
 h1 {
   text-align: center;
   font-size: 2rem;
@@ -14,6 +21,11 @@ h1 {
 section {
   height: 100vh;
   width: 100vh;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
 }
 
 p {
