--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #2a2a2a;
+  background-color: #24292f;
   color: white;
   font-family: 'Ubuntu', sans-serif;
   text-shadow: 1px 2px 4px black;
