--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@ h1 {
 }
 
 section {
-  height: 100vh;
-  width: 100vh;
+  min-height: 100vh;
   display: grid;
   align-items: center;
   justify-content: center;
