--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
   color: white;
   font-family: 'Ubuntu', sans-serif;
   text-shadow: 1px 2px 4px black;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
