--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
   background-color: #24292f;
   color: white;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Mona Sans","Mona Sans Header Fallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   text-shadow: 1px 2px 4px black;
   margin: 0;
   padding: 0;
