--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 1s;
 }
 
 body {
@@ -27,11 +28,10 @@ section {
   opacity: 0;
   filter: blur(5px);
   transform: translateX(-100px);
-  transition: all 1s;
 }
 
 @media(prefers-reduced-motion: reduce) {
-  .hidden {
+  * {
     transition: none;
   }
 }
