--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ section {
 
 .hidden {
   opacity: 0;
-  filter: blur(5px);
+  filter: blur(10px);
   transform: translateX(-100px);
 }
 
@@ -46,6 +46,7 @@ section {
 @media (min-width: 768px) {
   /* Use a two-column layout for larger screens */
   .container {
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
