--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-/* Add some basic styles */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap');
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,10 +11,15 @@
 body {
   background-color: #24292f;
   color: white;
-  font-family: "Mona Sans","Mona Sans Header Fallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: 'Fira Code', monospace;
+  font-weight: 400;
   text-shadow: 1px 2px 4px black;
   margin: 0;
   padding: 0;
+}
+
+b {
+  font-weight: 700;
 }
 
 section {
