--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,15 @@ b, strong {
   font-weight: 700;
 }
 
+a {
+  color: orangered;
+  text-decoration: dotted;
+}
+
+a:hover {
+  color: rgb(255, 145, 0);
+}
+
 section {
   min-height: 100vh;
   display: grid;
