--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@ a:hover {
   color: rgb(255, 145, 0);
 }
 
+h1, h2, h3 {
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
 section {
   min-height: 100vh;
   display: grid;
