--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
 }
 
 body {
-  background-color: #24292f;
+  background: rgb(68, 85, 105);
+  background: linear-gradient(180deg, rgba(68, 85, 105, 1) 0%, rgba(36, 41, 47, 1) 100%);
   color: white;
   font-family: 'Fira Code', monospace;
   font-weight: 400;
@@ -18,7 +19,8 @@ body {
   padding: 0;
 }
 
-b, strong {
+b,
+strong {
   font-weight: 700;
 }
 
@@ -31,7 +33,9 @@ a:hover {
   color: rgb(255, 145, 0);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: 700;
   margin-bottom: 15px;
 }
@@ -72,33 +76,39 @@ iframe {
 .hidden:nth-child(0) {
   transition-delay: 0;
 }
+
 .hidden:nth-child(1) {
   transition-delay: 200ms;
 }
+
 .hidden:nth-child(2) {
   transition-delay: 400ms;
 }
+
 .hidden:nth-child(3) {
   transition-delay: 600ms;
 }
+
 .hidden:nth-child(4) {
   transition-delay: 600ms;
 }
+
 .hidden:nth-child(5) {
   transition-delay: 800ms;
 }
+
 .hidden:nth-child(6) {
   transition-delay: 1000ms;
 }
 
 #myMap {
-  box-shadow: 0 0 10px 0 rgba(0,0,0,1);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
   text-shadow: none;
 }
 
 .portrait {
   border-radius: 10%;
-  box-shadow: 0 0 10px 0 rgba(0,0,0,1);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
 }
 
 .responsive {
@@ -112,13 +122,16 @@ iframe {
 
 /* Use media queries to make the template responsive */
 @media (min-width: 768px) {
+
   /* Use a two-column layout for larger screens */
   .container {
     width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }.container {
+  }
+
+  .container {
     width: 80%;
     display: flex;
     flex-direction: row;
