--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,12 @@ iframe {
   transform: translateX(-100px);
 }
 
+.hidden:nth-child(even) {
+  opacity: 0;
+  filter: blur(10px);
+  transform: translateX(100px);
+}
+
 @media(prefers-reduced-motion: reduce) {
   * {
     transition: none;
@@ -116,7 +122,7 @@ iframe {
 
 .responsive {
   width: auto;
-  max-height: 85vh;
+  max-height: 50vh;
 }
 
 .container {
