--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,11 @@ iframe {
   transition: none;
 }
 
+.aboutme {
+  display: grid;
+  grid-template-columns: 45% 45%;
+}
+
 .portrait {
   border-radius: 10%;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
