--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ iframe {
 
 .aboutme {
   display: grid;
-  grid-template-columns: 45% 45%;
+  grid-template-columns: auto auto;
 }
 
 .portrait {
