--- a/styles.css
+++ b/styles.css
@@ -178,4 +178,10 @@ i {
     margin: 1rem;
     text-align: center;
   }
+
+  .aboutme {
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 10px;
+  }
 }
