--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   color: white;
   font-family: 'Fira Code', monospace;
   font-weight: 400;
-  text-shadow: 1px 2px 4px black;
+  text-shadow: 1px 1px 0 black, 2px 2px 0 black, 3px 3px 0 black;
   margin: 0;
   padding: 0 40px; 
 }
