--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: rgb(68, 85, 105);
+  background-color: #202020;
   color: white;
   font-family: 'Fira Code', monospace;
   font-weight: 400;
