--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ iframe {
 
   .aboutme {
     display: grid;
+    grid-template-columns: auto;
     grid-template-rows: auto auto;
     gap: 10px;
   }
