--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,17 @@ iframe {
   width: 100%;
 }
 
+.logos {
+  display: grid;
+  background-color: white;
+  grid-template-column: 100px 100px 100px;
+  gap: 10px;
+}
+
+.logos > img {
+  max-height: 60px;
+}
+
 /* Use media queries to make the template responsive */
 @media (min-width: 768px) {
 
