--- a/styles.css
+++ b/styles.css
@@ -138,14 +138,17 @@ iframe {
   width: 100%;
 }
 
-.logos {
+.panel {
   display: grid;
   background-color: white;
-  grid-template-column: 100px 100px 100px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
+  grid-template-columns: 100px 100px 100px;
   gap: 10px;
 }
 
-.logos > img {
+.panel > img {
   max-height: 60px;
 }
 
