--- a/styles.css
+++ b/styles.css
@@ -160,12 +160,8 @@ iframe {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: auto auto auto;
   gap: 10px;
-}
-
-.panel > img {
-  max-height: 60px;
 }
 
 /* Use media queries to make the template responsive */
