--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ iframe {
   position: relative;
   transform-style: preserve-3d;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 40px 4px 40px 4px;
 }
 .box::before {
   content: "";
