--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,13 @@ h4 {
 }
 
 section {
-  min-height: 100vh;
+  min-height: 90vh;
   display: grid;
   align-items: center;
   justify-content: center;
   align-content: center;
   justify-items: center;
+  margin: 5vh 0;
 }
 
 iframe {
