--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ iframe {
 .portrait {
   border-radius: 10%;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
-  max-height: 70vh;
+  max-height: 80vh !important;
 }
 
 .responsive {
