--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,12 @@ iframe {
   max-height: 80vh !important;
 }
 
+.portraitw {
+  border-radius: 10%;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
+  max-height: 40vh !important;
+}
+
 .responsive {
   width: auto;
   max-height: 350px;
