--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,9 @@ iframe {
   max-height: 80vh !important;
 }
 
-.portraitw {
+.portrait2 {
+  margin: 0 auto;
+  width: auto;
   border-radius: 10%;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1);
   max-height: 40vh !important;
